// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auto createLabels should create the labels 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "description": "Increment the major version when merged",
          "name": "major",
          "title": "💥  Breaking Change",
          "type": "major",
        },
        Object {
          "description": "Increment the minor version when merged",
          "name": "minor",
          "title": "🚀  Enhancement",
          "type": "minor",
        },
        Object {
          "description": "Increment the patch version when merged",
          "name": "patch",
          "title": "🐛  Bug Fix",
          "type": "patch",
        },
        Object {
          "description": "Preserve the current version when merged",
          "name": "skip-release",
          "type": "skip-release",
        },
        Object {
          "description": "Create a release when this pr is merged",
          "name": "release",
          "type": "release",
        },
        Object {
          "description": "Changes only affect the internal API",
          "name": "internal",
          "title": "🏠  Internal",
        },
        Object {
          "description": "Changes only affect the documentation",
          "name": "documentation",
          "title": "📝  Documentation",
        },
        Object {
          "description": "Increment the major version when merged",
          "name": "Version: Major",
          "title": "💥  Breaking Change",
          "type": "major",
        },
        Object {
          "description": "Increment the patch version when merged",
          "name": "Version: Patch",
          "title": "🐛  Bug Fix",
          "type": "patch",
        },
        Object {
          "description": "Increment the minor version when merged",
          "name": "Version: Minor",
          "title": "🚀  Enhancement",
          "type": "minor",
        },
      ],
      Object {},
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Auto should extend config 1`] = `
Object {
  "baseBranch": "master",
  "extends": "@artsy",
  "labels": Array [
    Object {
      "description": "Increment the major version when merged",
      "name": "major",
      "title": "💥  Breaking Change",
      "type": "major",
    },
    Object {
      "description": "Increment the minor version when merged",
      "name": "minor",
      "title": "🚀  Enhancement",
      "type": "minor",
    },
    Object {
      "description": "Increment the patch version when merged",
      "name": "patch",
      "title": "🐛  Bug Fix",
      "type": "patch",
    },
    Object {
      "description": "Preserve the current version when merged",
      "name": "skip-release",
      "type": "skip-release",
    },
    Object {
      "description": "Create a release when this pr is merged",
      "name": "release",
      "type": "release",
    },
    Object {
      "description": "Changes only affect the internal API",
      "name": "internal",
      "title": "🏠  Internal",
    },
    Object {
      "description": "Changes only affect the documentation",
      "name": "documentation",
      "title": "📝  Documentation",
    },
  ],
  "onlyPublishWithReleaseLabel": true,
  "owner": "foo",
  "prereleaseBranches": Array [
    "next",
  ],
  "repo": "bar",
  "skipReleaseLabels": Array [
    "skip-release",
  ],
  "token": "XXXX",
}
`;

exports[`Auto should extend local config 1`] = `
Object {
  "bar": "foo",
  "baseBranch": "master",
  "extends": "./fake.json",
  "labels": Array [
    Object {
      "description": "Increment the major version when merged",
      "name": "major",
      "title": "💥  Breaking Change",
      "type": "major",
    },
    Object {
      "description": "Increment the minor version when merged",
      "name": "minor",
      "title": "🚀  Enhancement",
      "type": "minor",
    },
    Object {
      "description": "Increment the patch version when merged",
      "name": "patch",
      "title": "🐛  Bug Fix",
      "type": "patch",
    },
    Object {
      "description": "Preserve the current version when merged",
      "name": "skip-release",
      "type": "skip-release",
    },
    Object {
      "description": "Create a release when this pr is merged",
      "name": "release",
      "type": "release",
    },
    Object {
      "description": "Changes only affect the internal API",
      "name": "internal",
      "title": "🏠  Internal",
    },
    Object {
      "description": "Changes only affect the documentation",
      "name": "documentation",
      "title": "📝  Documentation",
    },
  ],
  "owner": "foo",
  "prereleaseBranches": Array [
    "next",
  ],
  "repo": "bar",
  "skipReleaseLabels": Array [
    "skip-release",
  ],
  "token": "XXXX",
}
`;
